--- a/pom.xml
+++ b/pom.xml
@@ -50,18 +50,18 @@
             <artifactId>jasperreports</artifactId>
             <version>5.6.1</version>
             <exclusions>                
-                <exclusion>
+<!--                <exclusion>
                     <artifactId>jackson-databind</artifactId>
                     <groupId>com.fasterxml.jackson.core</groupId>
-                </exclusion>
-                <exclusion>
+                </exclusion>-->
+<!--                <exclusion>
                     <artifactId>jackson-annotations</artifactId>
                     <groupId>com.fasterxml.jackson.core</groupId>
                 </exclusion>
                 <exclusion>
                     <artifactId>jackson-core</artifactId>
                     <groupId>com.fasterxml.jackson.core</groupId>
-                </exclusion>
+                </exclusion>-->
             </exclusions>               
         </dependency>    
         <!-- BEGIN- TEST-->
