--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,47 @@
   
     <groupId>br.uff.sti</groupId>
     <artifactId>jersey-mvc-jasper</artifactId>
-    <version>0.1rc</version>
+    <version>0.2-SNAPSHOT</version>
     
     <packaging>jar</packaging>
     
-    <name>jersey-ext-mvc-jasper</name>
-    
- 
-    <description>
-        Jersey Teplate to integrate Jasper in Jersey Template system, generating PDF files
-    </description>
+    <name>jersey-mvc-jasper</name>
+    <description>Jersey Teplate to integrate Jasper in Jersey Template system, generating PDF files</description>
+    <url>https://github.com/marcosvpcortes/jersey-mvc-jasper</url>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/marcosvpcortes/jersey-mvc-jasper</url>
+        <connection>scm:git:git://github.com/marcosvpcortes/jersey-mvc-jasper</connection>
+        <developerConnection>scm:git:git@github.com:marcosvpcortes/jersey-mvc-jasper.git</developerConnection>
+    </scm>
+        
+    <developers>
+        <developer>
+            <name>Marcos Côrtes</name>
+            <email>marcoscortes@id.uff.br</email>
+            <organization>UFF/STI</organization>
+            <organizationUrl>http://www.sti.uff.br/</organizationUrl>
+        </developer>
+    </developers>
+    
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+        
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compile.encoding>UTF-8</maven.compile.encoding>
+    </properties>
+         
     <build>
         <plugins>
             <plugin>
