--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   
     <groupId>br.uff.sti</groupId>
     <artifactId>jersey-mvc-jasper</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     
     <packaging>jar</packaging>
     
